RESOLVED FIXED150085
[GTK] Fix build for ENABLE_TOUCH_EVENTS=OFF
https://bugs.webkit.org/show_bug.cgi?id=150085
Summary [GTK] Fix build for ENABLE_TOUCH_EVENTS=OFF
Sergio Villar Senin
Reported 2015-10-13 04:58:55 PDT
[GTK] Fix build for ENABLE_TOUCH_EVENTS=OFF
Attachments
Patch (7.53 KB, patch)
2015-10-13 05:01 PDT, Sergio Villar Senin
no flags
Sergio Villar Senin
Comment 1 2015-10-13 05:01:12 PDT
WebKit Commit Bot
Comment 2 2015-10-13 05:03:46 PDT
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Carlos Garcia Campos
Comment 3 2015-10-13 05:55:06 PDT
Comment on attachment 262982 [details] Patch I had this patch in a local branch, but forgot to submit it. Thanks!
WebKit Commit Bot
Comment 4 2015-10-13 07:42:58 PDT
Comment on attachment 262982 [details] Patch Clearing flags on attachment: 262982 Committed r190987: <http://trac.webkit.org/changeset/190987>
WebKit Commit Bot
Comment 5 2015-10-13 07:43:02 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.