[GTK] Fix build for ENABLE_TOUCH_EVENTS=OFF https://bugs.webkit.org/show_bug.cgi?id=150085

Reviewed by Carlos Garcia Campos.

Source/WebKit2:

* Shared/gtk/NativeWebTouchEventGtk.cpp:
* Shared/gtk/WebEventFactory.cpp:
* Shared/gtk/WebEventFactory.h:
* UIProcess/API/gtk/PageClientImpl.cpp:
* UIProcess/API/gtk/PageClientImpl.h:
* UIProcess/API/gtk/WebKitWebViewBase.cpp:
(webkit_web_view_base_class_init):

Tools:

* WebKitTestRunner/gtk/EventSenderProxyGtk.cpp:


Canonical link: https://commits.webkit.org/168219@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@190987 268f45cc-cd09-0410-ab3c-d52691b4dbfc