Tools/WebKitTestRunner/gtk/EventSenderProxyGtk.cpp
@@ -489,6 +489,7 @@ GUniquePtr<GdkEvent> EventSenderProxy::createTouchEvent(GdkEventType eventType, 
     return touchEvent;
 }
 
+#if ENABLE(TOUCH_EVENTS)
 void EventSenderProxy::addTouchPoint(int x, int y)
 {
     // Touch ID is array index plus one, so 0 is skipped.
@@ -579,6 +580,6 @@ void EventSenderProxy::setTouchModifier(WKEventModifiers modifier, bool enable)
         m_updatedTouchEvents.add(GPOINTER_TO_INT(event->touch.sequence));
     }
 }
-
+#endif // ENABLE(TOUCH_EVENTS)
 
 } // namespace WTR
